[package]
name = "kvs"
version = "0.1.0"
authors = ["Fernando Ledesma <frledesma@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = {version="~2.33.1", features = ["yaml"]}
serde = {version = "1.0.113", features = ["derive"]}
serde_json = "1.0"
slog = "2"
slog-term = "2"
slog-async = "2"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.2.11"
rand = "0.6.5"
