[package]
name = "kvs"
version = "0.1.0"
authors = ["Fernando Ledesma <frledesma@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = {version="~2.33.1", features = ["yaml"]}
serde = {version = "1.0.113", features = ["derive"]}
serde_json = "1.0"
slog = "2"
slog-term = "2"
slog-async = "2"
slog-envlogger = "2"
sled = "0.34"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.3.3"
rand = "0.6.5"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[[bench]]
name = "benchmark_1"
harness = false
